# cadread

./: .cproject  .gitignore  .gitmodules  .project  CMakeLists.txt  Importing.cpp  Importing.h  Makefile  brep_utils.h  cadread.cpp  cadread_ConsoleProgressIndicator.cpp  cadread_ConsoleProgressIndicator.h
cmake/: FindOCC.cmake
src/: .editorconfig  Exporting.cpp  Exporting.h  Importing.cpp  Importing.h  brep_utils.h  cadread.cpp  cadread_ConsoleProgressIndicator.cpp  cadread_ConsoleProgressIndicator.h
